# dar-extensions

./: CHANGELOG.md  Cargo.toml  README.md  bump.sh
discord/: Cargo.toml  README.md
discord/src/: addressing.rs  attachments.rs  commands.rs  config.rs  delivery.rs  history.rs  lib.rs  live_answer.rs  markdown.rs  runtime.rs  session.rs  tools.rs
irc/: Cargo.toml  PRD.md  README.md
irc/src/: addressing.rs  config.rs  conn.rs  lib.rs  loop_guard.rs  proto.rs  session.rs  split.rs
slack/: Cargo.toml  README.md
slack/src/: addressing.rs  api.rs  attachments.rs  commands.rs  config.rs  history.rs  lib.rs  live_answer.rs  mrkdwn.rs  runtime.rs  session.rs  thinking.rs  tools.rs
src/: addressing.rs  config.rs  conn.rs  lib.rs  split.rs
telegram/: CHANGELOG.md  Cargo.toml  README.md
telegram/src/: ack.rs  lib.rs  markdown.rs  session.rs  stream.rs
