[package]
name = "telegram"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

# Discovery marker: `agentropy build` finds this crate by its factory metadata
# when it is dropped into an agent's `extensions/` directory.
[package.metadata.agentropy]
factory = "telegram::extension"

[dependencies]
anyhow = "1"
# Stock dar crates, pinned to a portable git rev (matches `cargo agentropy new`).
# host-api + at most one capability crate (cap-chat); orchestrator-api is a
# shared bus-payload crate and does not count against that limit.
cap-chat = { git = "https://github.com/tobalsan/dar.git", rev = "4d51754c54124c449534ca1f2641b6c90fff49bc" }
host-api = { git = "https://github.com/tobalsan/dar.git", rev = "4d51754c54124c449534ca1f2641b6c90fff49bc" }
orchestrator-api = { git = "https://github.com/tobalsan/dar.git", rev = "4d51754c54124c449534ca1f2641b6c90fff49bc" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.43", features = ["macros", "rt", "sync", "time"] }
tracing = "0.1"

[workspace]
