[package]
name = "telegram"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

# Discovery marker: `agentropy build` finds this crate by its factory metadata
# when it is dropped into an agent's `extensions/` directory.
[package.metadata.agentropy]
factory = "telegram::extension"

[dependencies]
anyhow = "1"
# Stock dar crates, pinned to a portable git rev (matches `cargo agentropy new`).
# host-api + cap-chat (capability) + chat-pi (bundled stock backend so the channel
# works under the default `foreground: logs` without a tui) + runner-core (host-tool
# bridge helper); orchestrator-api is a shared bus-payload crate.
cap-chat = { git = "https://github.com/tobalsan/dar.git", rev = "33e552f4533e35449d3dc4a8dc75ab78b254eba6" }
chat-pi = { git = "https://github.com/tobalsan/dar.git", rev = "33e552f4533e35449d3dc4a8dc75ab78b254eba6" }
host-api = { git = "https://github.com/tobalsan/dar.git", rev = "33e552f4533e35449d3dc4a8dc75ab78b254eba6" }
orchestrator-api = { git = "https://github.com/tobalsan/dar.git", rev = "33e552f4533e35449d3dc4a8dc75ab78b254eba6" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
runner-core = { git = "https://github.com/tobalsan/dar.git", rev = "33e552f4533e35449d3dc4a8dc75ab78b254eba6" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.43", features = ["macros", "rt", "sync", "time"] }
tracing = "0.1"

[workspace]
