[package]
name = "discord"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[package.metadata.dar]
factory = "discord::extension"
requires_stock = ["chat-pi"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
dar-extension-sdk = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.43", features = ["fs", "io-util", "macros", "net", "rt", "sync", "time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tokio-util = "0.7"
tracing = "0.1"
url = "2"

[dev-dependencies]
dar-host-api = { path = "/Users/agents/code/agentropy/dar/crates/host-api" }

[workspace]

[patch.crates-io]
dar-extension-sdk = { path = "/Users/agents/code/agentropy/dar/crates/extension-sdk" }
