[package]
name = "irc"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[package.metadata.dar]
factory = "irc::extension"
requires_stock = ["chat-pi"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
dar-extension-sdk = { path = "../../dar/crates/extension-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.43", features = ["macros", "rt", "sync", "time", "io-util", "net"] }
# TLS-capable async socket stack for the raw IRC connection.
tokio-rustls = "0.26"
webpki-roots = "1"
tracing = "0.1"

[dev-dependencies]
# Enables tokio's paused virtual clock (`time::pause`/`advance`) so timeout-based
# behaviour (the idle read timeout) is tested deterministically without sleeping.
tokio = { version = "1.43", features = ["test-util"] }

[workspace]
