[package]
name = "telegram"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[package.metadata.dar]
factory = "telegram::extension"
requires_stock = ["chat-pi"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
dar-extension-sdk = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.43", features = ["macros", "rt", "sync", "time"] }
tracing = "0.1"

[workspace]
